--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,7 @@ permalink: pretty
 title: Vinay Gopinath
 tagline: 'Adventures with technology and travel'
 description: 'Adventures with technology and travel'
-baseurl: ''
-paginate: 5
-paginate_path: "page:num"
+live_url: 'https://vinaygopinath.me'
 
 # About/contact
 author:
@@ -18,9 +16,19 @@ email:             vinay@vinaygopinath.me
 
 # Custom vars
 version:             1.0.0
-gems:                [jekyll-paginate]
+gems:                ["octopress-paginate"]
+include: ["_pages"]
 exclude: ["lib", "config.rb", ".sass-cache", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "_drafts"]
 markdown: kramdown
 kramdown:
 input: GFM
 syntax_highlighter: rouge
+
+pagination:
+  limit: 10
+  per_page: 5
+  permalink: /:num/
+
+sass:
+  sass_dir: public/styles
+  style: compressed
